--- a/itbp-gprs.service
+++ b/itbp-gprs.service
@@ -6,7 +6,7 @@ After=syslog.target
 Type=simple
 User=root
 Group=dialout
-ExecStart=/etc/init.d/iptb-gprs start
+ExecStart=/usr/local/bin/iptb-gprs start
 
 # Give a reasonable amount of time for the server to start up/shut down
 TimeoutSec=3000
