--- a/itbp-gprs.service
+++ b/itbp-gprs.service
@@ -7,6 +7,7 @@ Type=simple
 User=root
 Group=dialout
 ExecStart=/usr/local/bin/iptb-gprs start
+ExecStop=/usr/local/bin/itbp-gprs stop
 
 # Give a reasonable amount of time for the server to start up/shut down
 TimeoutSec=3000
