true != True in ini file

--- a/itbp-gprs.ini
+++ b/itbp-gprs.ini
@@ -8,5 +8,5 @@ gpio_status = 12
 [Connection]
 isp = Orange Prepay
 apn = net
-auto_connect = True  # Connect automaticaly at boot
+auto_connect = true  # Connect automaticaly at boot
 
