; is the proper comment delimiter for ini files

--- a/itbp-gprs.ini
+++ b/itbp-gprs.ini
@@ -1,5 +1,5 @@
 [Modem]
-serial = /dev/serial0
+serial = /dev/serial0  ; Modem serial port
 baud = 115200
 gpio_power  = 16
 gpio_reset  = 18
@@ -8,5 +8,5 @@ gpio_status = 12
 [Connection]
 isp = Orange Prepay
 apn = net
-auto_connect = true  # Connect automaticaly at boot
+auto_connect = true    ; Connect automaticaly at boot
 
