Connect to the internet

--- a/itbp-gprs.ini
+++ b/itbp-gprs.ini
@@ -6,7 +6,6 @@ gpio_reset  = 18
 gpio_status = 12
 
 [Connection]
-isp = Orange Prepay
-apn = net
+isp = orange-prepay
 auto_connect = true    ; Connect automaticaly at boot
 
