--- a/itbp-gprs.ini
+++ b/itbp-gprs.ini
@@ -1,11 +1,11 @@
 [Modem]
 serial = /dev/serial0  ; Modem serial port
-baud = 115200
-gpio_power  = 16
-gpio_reset  = 18
-gpio_status = 12
+baud = 115200          ; Modem speed
+gpio_power  = 16       ; Modem GPIO power pin
+gpio_reset  = 18       ; Modem GPIO reset pin
+gpio_status = 12       ; Modem GPIO status pin
 
 [Connection]
-isp = orange-prepay
+isp = orange-prepay    ; Peer file to be used by pppd
 auto_connect = true    ; Connect automaticaly at boot
 
