Initial skeleton for multiplatform and modem reset support

--- a/itbp-gprs.ini
+++ b/itbp-gprs.ini
@@ -1,3 +1,6 @@
+[Platform]
+type = bbb             ; Can be rpi or bbb
+
 [Modem]
 serial = /dev/serial0  ; Modem serial port
 baud = 115200          ; Modem speed
@@ -8,4 +11,3 @@ gpio_status = 12       ; Modem GPIO status pin
 [Connection]
 isp = orange-prepay    ; Peer file to be used by pppd
 auto_connect = true    ; Connect automaticaly at boot
-
