--- a/dhmsupervisord.service
+++ b/dhmsupervisord.service
@@ -6,8 +6,7 @@ After=syslog.target
 Type=simple
 User=root
 Group=root
-ExecStart=/usr/local/bin/itbp-gprs.py start
-ExecStop=/usr/local/bin/itbp-gprs.py stop
+ExecStart=/usr/local/bin/dhmsupervisord.py
 
 # Give a reasonable amount of time for the server to start up/shut down
 TimeoutSec=3000
