Update default ISP

--- a/dhmsupervisord.ini
+++ b/dhmsupervisord.ini
@@ -9,5 +9,5 @@ gpio_reset  = 18       ; Modem GPIO reset pin
 gpio_status = 12       ; Modem GPIO status pin
 
 [Connection]
-isp = orange-prepay    ; Peer file to be used by pppd
+isp = telekom          ; Peer file to be used by pppd
 auto_connect = true    ; Connect automaticaly at boot
