Added power enable pin entry in config file

--- a/dhmsupervisord.ini.sample
+++ b/dhmsupervisord.ini.sample
@@ -4,9 +4,10 @@ type = bbb             ; Can be rpi or bbb
 [Modem]
 serial = /dev/serial0  ; Modem serial port
 baud = 115200          ; Modem speed
-gpio_power  = 44       ; Modem GPIO power pin
+gpio_power  = 44       ; Modem GPIO on/off pin
 gpio_reset  = 18       ; Modem GPIO reset pin
 gpio_status = 45       ; Modem GPIO status pin
+gpio_enable = 49       ; Modem GPIO power enable pin (PSU)
 
 [Connection]
 isp = telekom          ; Peer file to be used by pppd
