Updated ppp provider

--- a/itbp-gprs.ini
+++ b/itbp-gprs.ini
@@ -6,6 +6,6 @@ gpio_reset  = 18
 gpio_status = 12
 
 [Connection]
-isp = orange-prepay
+isp = vodafone-industrial
 auto_connect = true    ; Connect automaticaly at boot
 
